--- a/index.html
+++ b/index.html
@@ -199,31 +199,31 @@
 
         <div class="row process-wrap">
 
-            <h2 class="display-2 text-center" data-aos="fade-up">Como funciona BusApp?</h2>
+            <h2 class="display-2 text-center" data-aos="fade-up">Cómo funciona BusApp?</h2>
 
             <div class="process" data-aos="fade-up">
                 <div class="process__steps block-1-2 block-tab-full group">
 
                     <div class="col-block step">
-                        <h3 class="item-title">Sign-Up</h3>
+                        <h3 class="item-title">Crea una cuenta</h3>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
                         </p> 
                     </div>
 
                     <div class="col-block step">
-                        <h3 class="item-title">Create</h3>
+                        <h3 class="item-title">Ingresa tu destino</h3>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
                         </p> 
                     </div>
                
                     <div class="col-block step">
-                        <h3 class="item-title">Compose</h3>
+                        <h3 class="item-title">Selecciona tus preferencias</h3>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
                         </p> 
                     </div>
 
                     <div class="col-block step">
-                        <h3 class="item-title">Send</h3>
+                        <h3 class="item-title">Disfruta de tu viaje</h3>
                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. 
                         </p> 
                     </div>  
@@ -415,7 +415,7 @@
 
                     <div class="item-plan__top-part">
                         <h3 class="item-plan__title">Gratis</h3>
-                        <p class="item-plan__price">S/.0</p>
+                        <p class="item-plan__price">S/ 0</p>
                         <p class="item-plan__per">Para siempre</p>
                     </div>
 
@@ -423,7 +423,7 @@
                         <ul class="item-plan__features">
                             <li><span>15</span> viajes gratis</li>
                             <li><span>5</span> viajes compartidos</li>
-                            <li><span>30</span>usos del Acevichómetro</li>
+                            <li><span>30</span> usos del Acevichómetro</li>
                             
                         </ul>
 
@@ -438,7 +438,7 @@
 
                     <div class="item-plan__top-part">
                         <h3 class="item-plan__title">Plan Pro</h3>
-                        <p class="item-plan__price">S/.9.99</p>
+                        <p class="item-plan__price">S/ 9.99</p>
                         <p class="item-plan__per">Por Mes</p>
                     </div>
 
