--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                    Un simple <br> modo de pago.
                 </h1>
                 <p class="lead">
-                    Solo paga un plan de 10 soles tener la experiencia completa de BusApp. Que esperas 
+                    Solo paga un plan de S/9.99 para tener la experiencia completa de BusApp. Que esperas 
                     tienes la mejor oportunidad de llevar tu viaje por transporte público al siguiente nivel
                 </p>
             </div>
